--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
             <a
               class="button"
-              href="https://www.youtube.com/watch?v=QukZYs2fTaY"
+              href="https://www.youtube.com/watch?v=niMtQU7QfTo&list=LL&index=124"
               target="_blank"
               >FESTAA</a
             >
@@ -136,7 +136,7 @@
               />
               <a
                 class="button"
-                href="https://www.youtube.com/watch?v=BiQIc7fG9pA"
+                href="https://www.youtube.com/watch?v=3e14skRuVk0"
                 target="_blank"
                 >GET OUT...</a
               >
@@ -177,7 +177,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    AMO OC, SO UM TIQUINHO!!!
+                    PQ TÃO INDIOTAAAAAA!!!
                   </p>
                   <cite>
                     <img
@@ -193,7 +193,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    PQ EU FIZ ISSO?
+                    PQ TÃO OTARIO
                   </p>
                   <cite>
                     <img
@@ -209,7 +209,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    PQ AMO OC...
+                    PQ TÃO BAKA...
                   </p>
                   <cite>
                     <img
@@ -237,7 +237,7 @@
             <h2 class="title">AMO VC</h2>
             <p>ACREDITOU? ACREDITE É TRUE...</p>
             <a
-              href="https://www.youtube.com/watch?v=3-Yh6rnOchs"
+              href="https://www.youtube.com/watch?v=W8z9rVGRXIg"
               class="button"
               target="_blank"
               ><i class=""></i>:/</a
