--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
             <a
               class="button"
-              href="https://www.youtube.com/watch?v=niMtQU7QfTo&list=LL&index=124"
+              href="https://www.youtube.com/watch?v=niMtQU7QfTo"
               target="_blank"
               >FESTAA</a
             >
@@ -253,7 +253,7 @@
               <img src="" alt="" />
               <a
                 class="button"
-                href="https://www.youtube.com/results?search_query=supercombo+morar"
+                href="https://www.youtube.com/watch?v=BlOGLVqoOcY&list=LL&index=94"
                 target="_blank"
                 >Presente</a
               >
@@ -287,7 +287,7 @@
       <div class="container grid">
         <div class="brand">
           <a class="logo logo-alt" href="#home">FELIZ<span>NIVER, MOMO</span>!</a>
-          <p>©2021 FELIIIIZZ NIVER</p>
+          <p>©2022 FELIIIIZZ NIVER</p>
           <p>Uhuuul!!</p>
         </div>
 
