--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </p>
             <a
               class="button"
-              href="https://www.youtube.com/watch?v=Cs5vUfddkT8"
+              href="https://www.youtube.com/watch?v=MwymbuznQH0"
               target="_blank"
               >Otarioooo</a
             >
