--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                       src="assets/fotos/10.jpeg"
                       alt="Foto de Wanessa Souza"
                     />
-                    Lasanha de frango
+                    Cururu
                   </cite>
                 </blockquote>
               </div>
@@ -200,7 +200,7 @@
                       src="assets/fotos/56.jpeg"
                       alt="Foto de Franciele Venega"
                     />
-                    Creuza Silva
+                    Fausta
                   </cite>
                 </blockquote>
               </div>
@@ -216,7 +216,7 @@
                       src="assets/fotos/26.jpeg"
                       alt="Fotos de Valeska Fabris"
                     />
-                    Chocolate Quente
+                    Bunda
                   </cite>
                 </blockquote>
               </div>
