--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               />
               <a
                 class="button"
-                href="https://www.youtube.com/watch?v=VjEq-r2agqc"
+                href="https://www.youtube.com/watch?v=VxRpkfcXEpA"
                 target="_blank"
                 >Não desista a idade chega pra tds</a
               >
@@ -136,11 +136,11 @@
               />
               <a
                 class="button"
-                href="https://www.youtube.com/watch?v=3e14skRuVk0"
+                href="https://www.youtube.com/watch?v=4XKGfziuw5c"
                 target="_blank"
                 >GET OUT...</a
               >
-              <h3 class="title">NÃO MERECE NADA</h3>
+              <h3 class="title">NÃO MERECE NADA, CLICOOU? OTARIO</h3>
               <p></p>
             </div>
             <div class="card">
