--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="text">
             <h2 class="title">Booko</h2>
             <p>
-              Ta ficando velho, bb? Oh mo desuu
+              Ta ficando velho, bb? Oh, mo desuu
             </p>
             <a
               class="button"
@@ -82,9 +82,9 @@
           </div>
           <div class="text">
             <h2 class="title">
-              Baka ta ficando velho
+              Baka tá ficando velho, mo, desuuu
             </h2>
-            <p>BOKO</p>
+            <p>BOKO, muitos anos de bakice pro ceeeeeeee</p>
             <br />
             <p>Bakinha idoso</p>
             <br />
@@ -177,7 +177,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    PQ TÃO INDIOTAAAAAA!!!
+                    PQ TÃO INDIOTAAAAAA!!??
                   </p>
                   <cite>
                     <img
@@ -193,7 +193,7 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    PQ TÃO OTARIO
+                    PQ TÃO OTARIO???
                   </p>
                   <cite>
                     <img
