--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feliz Niver Babaka</title>
+    <title>Rafhael Lopes</title>
 
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
@@ -28,15 +28,15 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">FELIZ<span>NIVER</span>, BABAKAAA!!!!</a>
+        <a class="logo" href="#">Rafhael<span>Lopes</span></a>
         <!-- menu -->
         <div class="menu">
           <ul class="grid">
-            <li><a class="title" href="#home">I</a></li>
-            <li><a class="title" href="#about">DON'T</a></li>
-            <li><a class="title" href="#services"> LIKE</a></li>
-            <li><a class="title" href="#testimonials">UUU</a></li>
-            <li><a class="title" href="#contact">BABAKAAA</a></li>
+            <li><a class="title" href="#home"></a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços </a></li>
+            <li><a class="title" href="#testimonials"></a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
         <!-- /menu -->
